--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,33 @@
-<app-por-capital></app-por-capital>
-<app-por-pais></app-por-pais>
-<app-sidebar></app-sidebar>
-<app-por-continente></app-por-continente>
+<div class="row container mt-4">
+
+<div class="col-3">
+
+  <h2>
+    Busquedas
+  </h2>
+  <hr>
+  <ul class="list-group">
+    <li class="list-group-item active">
+      Buscar País
+    </li>
+    <li class="list-group-item">
+      Buscar por Continente
+    </li>
+    <li class="list-group-item">
+      Buscar por Capital
+    </li>
+  </ul>
+
+</div>
+
+<div class="col">
+
+  <h2>Por Capital</h2>
+  <hr>
+
+  <app-por-capital></app-por-capital>
+
+</div>
+
+
+</div>
