--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,21 +2,7 @@
 
 <div class="col-3">
 
-  <h2>
-    Busquedas
-  </h2>
-  <hr>
-  <ul class="list-group">
-    <li class="list-group-item active">
-      Buscar País
-    </li>
-    <li class="list-group-item">
-      Buscar por Continente
-    </li>
-    <li class="list-group-item">
-      Buscar por Capital
-    </li>
-  </ul>
+  <app-sidebar></app-sidebar>
 
 </div>
 
