Se crea el contenido de la pagina PorPais, se construye con div y se le da formato con bootstrap. Se crea una tabla en donde en principio tendremos los resultados de la busqueda que introducimos en un input de un formulario. Para ello, implementamos el ngSubmit que nos dirige a una funcion que nos devuelve el termino que le introducimos en consola, de esta manera vamos viendo como podremos capturarlo.

--- a/src/app/pais/paginas/por-pais/por-pais.component.html
+++ b/src/app/pais/paginas/por-pais/por-pais.component.html
@@ -1,1 +1,68 @@
-<p>por-pais works!</p>
+<h2>Por pais</h2>
+<hr>
+
+
+<div class="row">
+    <div class="col">
+        <form (ngSubmit)="buscar()" autocomplete="off">
+
+            <input type="text" name="terminoBusqueda" placeholder="Buscar pais..."
+            class="form-control"
+            [(ngModel)]="terminoBusqueda"
+            >
+        </form>
+    </div>
+
+
+
+</div>
+
+
+<hr>
+
+<div class="alert alert-danger">
+
+    No se encontro nada con el término introducido
+
+</div>
+
+
+<div class="row">
+    <div class="col">
+
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        #
+                    </th>
+                    <th>
+                        Bandera
+                    </th>
+                    <th>
+                        Nombre
+                    </th>
+                    <th>
+                        Población
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        1
+                    </td>
+                    <td>bandera</td>
+                    <td>nombre</td>
+                    <td>12343434</td>
+                    <td>
+                        <a href="ljlljljl"></a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
+
+</div>
