Se añade el tratamiento de los errores cuando se introduce un termino que no se encuentra en el listado de los paises, para ello se hace un tratamiento en la funcion buscar ya que el metodo subscribe nos permite trabajar con el error

--- a/src/app/pais/paginas/por-pais/por-pais.component.html
+++ b/src/app/pais/paginas/por-pais/por-pais.component.html
@@ -20,9 +20,12 @@
 
 <hr>
 
-<div class="alert alert-danger">
+<div 
 
-    No se encontro nada con el término introducido
+*ngIf="hayError"
+class="alert alert-danger">
+
+    No se encontro nada con el término {{terminoBusqueda}}
 
 </div>
 
