--- a/src/app/pais/paginas/por-pais/por-pais.component.html
+++ b/src/app/pais/paginas/por-pais/por-pais.component.html
@@ -4,13 +4,7 @@
 
 <div class="row">
     <div class="col">
-        <form (ngSubmit)="buscar()" autocomplete="off">
-
-            <input type="text" name="terminoBusqueda" placeholder="Buscar pais..."
-            class="form-control"
-            [(ngModel)]="terminoBusqueda"
-            >
-        </form>
+        <app-pais-input></app-pais-input>
     </div>
 
 
@@ -33,41 +27,7 @@ class="alert alert-danger">
 <div *ngIf="paises.length>0" class="row">
     <div class="col">
 
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>
-                        #
-                    </th>
-                    <th>
-                        Bandera
-                    </th>
-                    <th>
-                        Nombre
-                    </th>
-                    <th>
-                        Población
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let pais of paises ;let indice=index">
-                    <td>
-                        {{indice+1}}
-                    </td>
-                    <td>
-                        <img  class="small-flag" src="{{pais.flag}}" alt="">
-                    </td>
-                    <td>{{pais.name}}</td>
-                    <td>{{pais.population | number}}</td>
-                    <td>
-                        <a [routerLink]="['/pais' , pais.alpha2Code]" >Ver...</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-
+      <app-pais-tabla [paises]="paises"></app-pais-tabla>
     </div>
 
 </div>
