--- a/src/app/pais/componentes/pais-input/pais-input.component.html
+++ b/src/app/pais/componentes/pais-input/pais-input.component.html
@@ -3,5 +3,6 @@
     <input type="text" name="terminoBusqueda" placeholder="Buscar pais..."
     class="form-control"
     [(ngModel)]="terminoBusqueda"
+    (input)="teclaPresionada( )"
     >
 </form>
