--- a/src/app/pais/paginas/por-pais/por-pais.component.html
+++ b/src/app/pais/paginas/por-pais/por-pais.component.html
@@ -4,7 +4,8 @@
 
 <div class="row">
     <div class="col">
-        <app-pais-input (onEnter)="buscar( $event )">
+        <app-pais-input (onEnter)="buscar( $event )"
+        (onDebounce)="sugerencias($event)">
 
         </app-pais-input>
     </div>
