Se implementa la funcionalidad de buscar por capital. Para ello, creamos un nuevo servicio para que la direccion de la api busque por su parametro capital en vez de name. Creamos una funcion en el capital component parecida a la de pais. Despues arreglamos el placeholder para que muestre la informacion correcta segun pais o capital, para ello creamos un input en pais-input.

--- a/src/app/pais/paginas/por-capital/por-capital.component.html
+++ b/src/app/pais/paginas/por-capital/por-capital.component.html
@@ -1,1 +1,37 @@
-<p>por-capital works!</p>
+<h2>Por capital</h2>
+<hr>
+
+
+<div class="row">
+    <div class="col">
+        <app-pais-input (onEnter)="buscarCapital( $event )"
+        placeholder="Buscar capital..."
+        >
+
+        </app-pais-input>
+    </div>
+
+
+
+</div>
+
+
+<hr>
+
+<div 
+
+*ngIf="hayError"
+class="alert alert-danger">
+
+    No se encontro nada con el término {{terminoBusqueda}}
+
+</div>
+
+
+<div *ngIf="paises_capital.length>0" class="row">
+    <div class="col">
+
+      <app-pais-tabla [paises]="paises_capital"></app-pais-tabla>
+    </div>
+
+</div>
