--- a/src/app/pais/paginas/por-pais/por-pais.component.html
+++ b/src/app/pais/paginas/por-pais/por-pais.component.html
@@ -5,7 +5,9 @@
 <div class="row">
     <div class="col">
         <app-pais-input (onEnter)="buscar( $event )"
-        (onDebounce)="sugerencias($event)">
+        (onDebounce)="sugerencias($event)"
+        placeholder="Buscar pais..."
+        >
 
         </app-pais-input>
     </div>
