--- a/src/app/pais/componentes/pais-input/pais-input.component.html
+++ b/src/app/pais/componentes/pais-input/pais-input.component.html
@@ -1,6 +1,6 @@
 <form (ngSubmit)="buscar()" autocomplete="off">
 
-    <input type="text" name="terminoBusqueda" placeholder="Buscar pais..."
+    <input type="text" name="terminoBusqueda" [placeholder]="placeholder"
     class="form-control"
     [(ngModel)]="terminoBusqueda"
     (input)="teclaPresionada( )"
