--- a/src/app/pais/componentes/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/componentes/pais-tabla/pais-tabla.component.html
@@ -24,7 +24,7 @@
             <td>
                 <img  class="small-flag" src="{{pais.flag}}" alt="">
             </td>
-            <td>{{pais.name}}</td>
+            <td>{{pais.capital}} {{pais.name}}</td>
             <td>{{pais.population | number}}</td>
             <td>
                 <a [routerLink]="['/pais' , pais.alpha2Code]" >Ver...</a>
