--- a/src/app/pais/paginas/por-continente/por-continente.component.html
+++ b/src/app/pais/paginas/por-continente/por-continente.component.html
@@ -1,1 +1,29 @@
-<p>por-continente works!</p>
+<h3>Buscar por continente <small>{{regionActiva | titlecase}}</small></h3>
+
+<hr>
+
+
+<h5>Seleccione el continente: </h5>
+
+<div class="row">
+    <div class="col">
+
+        <!-- [class.btn-primary]="region ===regionActiva" -->
+
+
+        <!-- [ngClass]="{
+
+            'btn-primary':regionActiva===region, 
+            'btn-outline-primary':regionActiva!==region
+        }" -->
+        <button *ngFor="let region of regiones"
+        class="bt btn-outline-primary"
+       
+        
+        (click)="activarRegion(region)">
+            {{region}}
+        </button>
+
+        
+    </div>
+</div>
