Para que cuando se descargue la informacion de los paises que seleccionamos no consuma mas recursos de los necesarios, hacemos una seleccion de las caracteristicas que nos interesa informar y solamente le indicamos mediante filtros que descargue esa informacion, de esta manera el archivo descargado es mas liviano y la operacion se realiza mas rapida

--- a/src/app/pais/paginas/ver-pais/ver-pais.component.html
+++ b/src/app/pais/paginas/ver-pais/ver-pais.component.html
@@ -78,11 +78,11 @@ class="alert alert-info">
     </div>
 
 
-    <pre class="mt-5">
+    <!-- <pre class="mt-5">
 
         {{pais | json}}
 
-    </pre>
+    </pre> -->
 
 
 </ng-template>
